Change theming to gruvbox pallete.

--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -25,8 +25,8 @@ multiplier = 3
 draw_bold_text_with_bright_colors = true
 
 [colors.primary]
-background = "0x2E3440"
-foreground = "0xD8DEE9"
+background = "0x282828"
+foreground = "0xFABD2F"
 
 [colors.normal]
 black = "0x3B4252"
@@ -162,3 +162,6 @@ action = "ResetFontSize"
 [general]
 live_config_reload = true
 working_directory = "None"
+import = [
+	"~/.config/alacritty/gruvbox_dark.toml"
+]
